--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -15,6 +15,6 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build & Push Image
       run: |
-        echo "${{ secrets.DOCKERPW }}" | docker login -u "dab8106" --password-stdin
-        docker image build -t dab8106/pyflask:latest .
-        docker push dab8106/pyflask:latest
+        echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "bhandarip23" --password-stdin
+        docker image build -t bhandarip23/pyflask:latest .
+        docker push bhandarip23/pyflask:latest
